trunk/css/TestPlan.css
.typography * {
	font-family: Arial, "Trebuchet MS", sans-serif;
	font-size: 1em;
	color: #222;
}

p {
	margin-top: 6px;
	margin-bottom: 6px;
}

/* Generic form style */
textarea {
	padding: 5px;
}

input {
	margin-bottom: 5px;
}

/* CMS 
-------------------------------------------------------------- */
html #URLSegment {
	display: none;
}

/* -------------------------------------------------------------- */


/* Table of Content 
-------------------------------------------------------------- */
#tableOfContent {
	display: none;
	border: 1px #CCC solid;
	background-color: #E0E0FF;
	float: left;
	margin: 0 auto;
	padding: 0 15px 0 15px;
	width: 155px;
	position: fixed;
	
	top: 0px;
	left: 0px;
	bottom: 0px;
}

#tableOfContent h3 {
	margin-bottom: 0.6em;
}

#tableOfContent ul {
	padding-left: 0;
	margin-top: 0;
}

#tableOfContent li {
	text-align: left;
	margin-left: 10px;
}

#tableOfContent li a {
	font-size: 12px;
	text-decoration: none;
}	

#tableOfContent li a:hover {
	text-decoration: underline;
}

p.showHideIndex {
	margin-top: 0;
	text-align: center;
}

p.showHideIndex a {
	text-decoration: none;
	color: #0081C3;
	font-size: 12px;
}
/* -------------------------------------------------------------- */ 

.pageTitle {
	font-size: 1.5em;
	margin-bottom: 30px;
}

.steps {
	margin: 0;
	padding: 0;
}
.steps li.scenario,.steps li.fail,.steps li.pass,.steps li.skip {
	margin: 1em 0;
	padding: 0.3em;
	background-color: #EEE;
	border: 1px #CCC solid;
	list-style-type: none;
}

.steps li.fail {
	background-color: #FF7777;
}
.steps li.pass {
	background-color: #77DD44;
}

.steps li.skip {
	background-color: #ccc;
}

.steps .stepNote {
	margin-top: 0.5em;
	padding: 0.3em;
	background-color: #FFC;
}
.steps .stepNote h4 {
	margin: 0;
}
.steps .stepNote li {
	list-style-type: disc;
	margin: 0;
	padding: 0;
	background-color: transparent;
	border-style: none;
}


.passfail {
	float: right;
}

.passfail label {
	padding: 3px;
}

label.fail {
	color: #CC4422;
}
label.fail.selected {
	color: white;
	background-color: #CC4422;
}

label.pass {
	color: #118811;
}
label.pass.selected {
	background-color: #118811;
	color: white;
}

label.skip {
	color: #333;
}
label.skip.selected {
	background-color: #666;
	color: white;
}

.note textarea {
	width: 99%;
	height: 100px;
}

.changeable textarea {
	width: 90%;
	margin-bottom: 10px;
}

div.note {
	padding-top: 10px;
	margin-top: 10px;
	border-top: 1px solid #ccc;
}

ul#NoteDetail {
	padding: 0;
}
ul#NoteDetail li.stepdetail  {
	list-style-type: none;
	border: 1px #CCC solid;
	padding: 0.3em;
	margin: 0.5em;
	background-color: #FFC;
}
ul#NoteDetail li.pass {
	background-color: #EBE4C6;
}

ul#NoteDetail li.fail {
	background-color: #EBD0CE;
}

ul#NoteDetail li.skip {
	background-color: #ccc;
}

ul#NoteDetail li.resolved {
	background-color: #CFC;
}

table.data tr td { 
	cursor: hand;
	cursor: pointer;
}

# Added 07/01/2010 by Rainer Spittel

ul#NoteDetail .content li {
	border: none;
	background-color: transparent;
	list-style-type: decimal;
	margin: 0px;
}

.content li {
	border: none;
	background-color: transparent;
	margin: 0px;
}

ul#NoteDetail .label {
	margin: 2px;
}

ul#NoteDetail .content {
	margin-left: 40px;
	padding-left: 80px;
	padding-bottom: 5px;
	padding-top: 2px;
}

.boxed {
	padding: 5px 15px 5px 15px;
	margin-bottom: 5px;
}

.box {
	border: 1px #CCC solid;
	padding: 5px 15px 5px 15px;
	margin-bottom: 5px;
}

.description {
	border-left: 1px #CCC solid;
	border-right: 1px #CCC solid;
	border-bottom: 1px #CCC solid;
	padding: 5px 15px 5px 15px;
}

.featureTitle {
	border: 1px #CCC solid;
	background-color: #F0F0FF;
	padding: 5px 15px 5px 15px;
}

.leftPanel {
	border: 1px #CCC solid;
	background-color: #E0E0FF;
	float: left;
	margin: 0 auto;
	padding: 0 15px 0 15px;
	width: 155px;
	position: fixed;
	text-align: center;
	
	top: 0px;
	left: 0px;
	bottom: 0px;
}

	a.editModeLink {
		font-size: 1.2em;
	}
	
	/* Form */
	.leftPanel form input.action {
		width: 120px;
		margin-bottom: 5px;
		font-size: 1.1em;
	}
	
	/* Attachments */
	.noteAttachments, .attachmentList {
		font-size: 0.8em;
		text-align: right;
	}
	
	.noteAttachments input.ajaxupload {

	}
	
	ul.attachmentList {
		margin: 0;
		padding: 0;
	}
	
	ul.attachmentList li {
		list-style: none;
		margin-bottom: .6em;
	}
	
	ul.attachmentList li a.removeFile:hover {
		color: red;
	}

.rightPanel {
	position: absolute;
	left: 190px;
	float: left;
	right: 5px;
	padding: 0 10px;
}
	
	div.feature .header {
		margin-bottom: 10px;
	}
	
	div.header {
		margin-bottom: 30px;
	}
	
	/* Form */
	.rightPanel form .actions {
		padding-top: 5px;
		margin-bottom: 20px;
	}
	
	.rightPanel form input.action {
		font-size: 1.1em;
	}
	

.label {
	width:100px;
	float:left
}

div .actions {
	font-size: 0.7em;
	padding-top: 25px;
}


.goodMsg, .goodMsg li {
	color: #208020;
}

.badMsg {
	background-color:#CC4422;
	color:#E0E0FF;
	text-decoration:blink;
}

#statusmessage, .helptext {
	font-size: 10px;
}

.helptext {
	padding-bottom: 10px;
	margin-bottom: 15px;
	border-bottom: 1px solid #c5c5e6;
}

#statusmessage ul {
	padding-left: 10px;
	text-align: left;
}

#statusmessage {
	word-wrap: break-word;
}

#statusmessage strong {
	color: inherit;
}

div.reportheader .label {
	width: 100px;
	float: left;
}

div.reportheader .content {
	margin-left: 100px;
	margin-top: 0px;
}

ul.reportAttachmentList {
	margin: 6px 0 ;
	padding: 0;
	list-style: none;
}
	
ul.reportAttachmentList li {
	margin-bottom: .6em;
}

ul.reportAttachmentList li a.removeFile:hover {
	color: red;
}

#form_actions_right a {
	background-color: #C0C0C0;
	border: 1px solid #000000;
	float: left;
	padding: 3px 15px;
	font-size: 14px;
	margin-right: 10px;
}

.changeable {
	background-color: #D0F0D0;	
}

ul.steps li.scenario {
	padding: 5px 10px 10px;
}

.scenario div.content {
	margin-top: 30px;
}

.resolutionInfo {
	padding-right: 20px
}

.resolutionAction a {
	display: inline-block;
	font-size: 1.2em;
	padding: 5px;
	padding-left: 26px;
	border: 1px solid #888;
	margin-top: 10px;
	text-decoration: none;
	background-color: #DDDDDD;
	background-repeat: no-repeat;
	background-position: 3px 50%;
}

	.resolutionAction a:hover {
		background-color: #efefef;
	}

	.resolutionAction a.commentAction {
		background-image: url(../images/comment-button.png);
	}
	
	.resolutionAction a.resolveAction  {
		padding-left: 20px;
		background-image:url(../images/yes-button.png);
	}
	
	.resolutionAction a.unresolveAction  {
		padding-left: 20px;
		background-image: url(../images/no-button.png);
	}
	

.stepresultnote {
	padding-left: 20px;
}

.resolutionComments ul {
	padding-left: 20px;
}

.stepresultnote p {
	margin-top: 0px;
	margin-bottom: 0px;
}

fieldset {
	border: 0px;
}

